# Zap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  Common.hpp  cell_renderer.cpp  cell_solver_1d.cpp  cell_solver_2d.cpp  compare_clawpack.cpp  example_full_circle.cpp  example_inverse_ramp.cpp  example_quarter_circle.cpp  example_static_shock.cpp  example_x_ramp.cpp  example_x_ramp_fd.cpp  fd.cpp  is_symmetric.cpp  legacy_renderer.cpp  mat_solver.cpp  predict_shock.cpp  renderer.cpp  run_cell_based.cpp  run_solver.cpp  shock_ad_reference.cpp  shock_approx.cpp  show_initial_shock.cpp
apps/clawpack_solution/: fort.t0050
bench/: CMakeLists.txt  bench_cell_solver.cpp
examples/: CMakeLists.txt  cell_renderer.cpp  legacy_renderer.cpp  matrix_format.cpp  pipe.cpp  renderer.cpp  run_cell_based.cpp  run_solver.cpp  schrift_renderer.cpp
include/: BoundaryConditions.hpp  Igor.hpp  ReadMatrixInc.hpp  Solver.hpp  WriteMatrixInc.hpp
include/CellBased/: Cell.hpp  Chunk.hpp  Definitions.hpp  EigenDecomp.hpp  Geometry.hpp  Grid.hpp  GridHelper.hpp  Interface.hpp  PredictShock.hpp  Quadrature.hpp  QuadratureTables.hpp  ReconstructShock.hpp  SmallVector.hpp  Solver.hpp  Wave.hpp
include/IO/: Common.hpp  Fwd.hpp  IncCellReader.hpp  IncCellWriter.hpp  IncMatrixReader.hpp  IncMatrixWriter.hpp  NoopWriter.hpp  PointsToNpy.hpp  ReadClawpackClassic.hpp  ToNpy.hpp  VTKWriter.hpp
include/Igor/: Igor.hpp  Logging.hpp  Macros.hpp  Math.hpp  MemoryToString.hpp  ProgressBar.hpp  StaticVector.hpp  Timer.hpp  TypeName.hpp
include/MatBased/: BoundaryConditions.hpp  Matrix.hpp  Solver.hpp
include/Renderer/: Canvas.hpp  Color.hpp  FFmpeg.hpp  Modules.hpp
include/Scalar/: BoundaryConditions.hpp  Matrix.hpp  Solver.hpp
include/ShockAD_1D/: Solver.hpp
test/: CMakeLists.txt  test_cell_geometry.cpp  test_chunk_ratio.cpp  test_cut_grid.cpp  test_geometry_polygon.cpp  test_internal_wave.cpp  test_outer_interfaces.cpp  test_periodic_boundary.cpp  test_quadrature.cpp  test_small_vector.cpp  test_wave.cpp
